# critic-rx

./: .gitignore  EVALUATION_PROTOCOL.md  README.md  TEAM.md  pyproject.toml  requirements.txt
clearrx/: __init__.py  endpoint.py  premodel_common.py  premodel_delta.py  premodel_evidence.py  premodel_intent.py  premodel_lean.py  premodel_types.py  prompting.py  run_formalrx.py  schema.py  taxonomy.py  taxonomy_lens.py
docs/: clearrx_method.md
examples/: request_template.json
prompts/: formalrx_prompt_template.txt  formalrx_system_prompt.md  sci_28_taxonomy.json
scripts/: check_endpoint.py  download_dataset.py  download_runtime.sh  run_smoke_10.sh  run_smoke_100.sh  start_runtime.sh  validate_predictions.py
tests/: test_premodel_evidence.py  test_prompting.py  test_schema.py
