[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clearrx-formalrx-repro"
version = "0.1.0"
description = "ClearRx reproducibility runner for AI4Math-2026 FormalRx Track 1"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub>=0.23.0",
]

[tool.setuptools]
packages = ["clearrx"]

